--- a/blog/core/templates/base.html
+++ b/blog/core/templates/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}PixelPost{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+{#<link rel="stylesheet" href="http://localhost/static/styles/style.css"> <!-- hardcoded -->#}
+
 </head>
 <body>
 <header class="header">
