--- a/blog/core/templates/base.html
+++ b/blog/core/templates/base.html
@@ -15,6 +15,7 @@
         <div class="logo">
             <a href="{% url 'index' %}">Pixel<span>Post</span></a>
         </div>
+{#    <h1>{% static 'styles/style.css' %}</h1>#}
         <nav class="main-nav">
             <ul>
                 <li><a href="{% url 'index' %}">Home</a></li>
